# app/Http/Controllers/CarteCadeauClientdbController.php
@@ -3,12 +3,18 @@
 namespace App\Http\Controllers;
 
 use App\Models\CarteCadeauClient;
+use App\Models\CarteCadeauService;
 use App\Http\Requests\CarteCadeauClientRequest;
 use App\Models\Services;
+use App\Models\Payment;
+use Carbon\Carbon;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
 use Illuminate\Support\Facades\DB;
 use Illuminate\Support\Facades\Log;
+use Barryvdh\DomPDF\Facade\Pdf;
+use App\Mail\CarteCadeauMail;
+use Mail;
 
 
 /**
@@ -19,11 +25,17 @@ class CarteCadeauClientdbController extends Controller
 {
     /**
      * Display a listing of the resource.
-     */
+    */
     public function index()
     {
-        $carteCadeauClients = CarteCadeauClient::with('carteCadeauService.service.serviceCategory')->paginate(20);
+        $carteCadeauClients = CarteCadeauClient::with([
+            'clients',
+            'carteCadeauService.service.serviceCategory'],
+            'appointments',
+            'subscriptions'
+        )->paginate(20);
         $activemenuccs = 1;
+        // dd($carteCadeauClients);
         return view('carte-cadeau-client.index', compact('carteCadeauClients','activemenuccs'))
             ->with('i', (request()->input('page', 1) - 1) * $carteCadeauClients->perPage());
     }
@@ -54,7 +66,7 @@ class CarteCadeauClientdbController extends Controller
     public function show($id)
     {
         $carteCadeauClient = CarteCadeauClient::find($id);
-
+        
         return view('carte-cadeau-client.show', compact('carteCadeauClient'));
     }
 
@@ -86,4 +98,59 @@ class CarteCadeauClientdbController extends Controller
         return redirect()->route('carte-cadeau-clients.index')
             ->with('success', 'CarteCadeauClient deleted successfully');
     }
+
+    public function payercadeau(Request $request)
+    {
+        $carte = CarteCadeauClient::where("code", $request->code)->first();
+        if (!$carte) {
+            return redirect()->back()->with('error', 'Code introuvable.');
+        }
+        $carte->is_paid = 1;
+        $carte->save();
+        Payment::create([
+            'client_id'       => $request->client_id,
+            'total_amount'    => $request->total_amount,
+            'deposit'         => $request->total_amount,
+            'method'          => $request->method,
+            'code_carte_cadeau_client' =>$request->code,
+            'status'          => 'paid',
+            'paid_at'         => Carbon::now(),
+        ]);
+        Mail::to($carte->clients->email)->send(new CarteCadeauMail($carte));
+        return redirect()->back()->with('success', 'Paiement enregistré');
+    }
+
+    public function pdf_carte($id)
+    {
+        $cadeau = CarteCadeauClient::with([
+            'carteCadeauService.service.serviceCategory',
+            'clients'
+        ])->find($id);
+        if (!$cadeau) {
+            return redirect()->back()->with('error', 'Bon cadeau introuvable.');
+        }
+        return view('carte-cadeau-client.pdf-carte', [
+            'cadeau' => $cadeau
+        ]);
+    }
+
+    public function downloadPdf($id)
+    {
+        $cadeau = CarteCadeauClient::with(['carteCadeauService.service.serviceCategory', 'clients'])
+            ->find($id);
+        $pdf = Pdf::loadView('carte-cadeau-client.pdf', compact('cadeau'))
+            ->setPaper('a4', 'portrait')
+            ->setOptions([
+                'isHtml5ParserEnabled' => true,
+                'isRemoteEnabled' => false,
+                'defaultFont' => 'Arial',
+                'isPdf' => true, 
+                'dpi' => 150,
+                'enable_php' => false
+            ]);
+        $fileName = 'bon-cadeau-' . $cadeau->code . '.pdf';
+        return $pdf->download($fileName);
+    }
+
+
 }
