# storage/api-docs/api-docs.json
@@ -60,6 +60,9 @@
                                     },
                                     "from_subscription": {
                                         "type": "boolean"
+                                    },
+                                    "gift_code": {
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
@@ -151,20 +154,45 @@
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "service_id": {
+                                    "beneficiaire": {
+                                        "properties": {
+                                            "name": {
+                                                "type": "string"
+                                            },
+                                            "contact": {
+                                                "type": "string"
+                                            },
+                                            "email": {
+                                                "type": "string"
+                                            },
+                                            "message": {
+                                                "type": "string"
+                                            }
+                                        },
+                                        "type": "object"
+                                    },
+                                    "donneur": {
+                                        "properties": {
+                                            "name": {
+                                                "type": "string"
+                                            },
+                                            "email": {
+                                                "type": "string"
+                                            },
+                                            "password": {
+                                                "type": "string"
+                                            },
+                                            "contact": {
+                                                "type": "string"
+                                            }
+                                        },
+                                        "type": "object"
+                                    },
+                                    "prestationId": {
                                         "type": "integer"
                                     },
-                                    "amount": {
-                                        "type": "string"
-                                    },
-                                    "benefeciaire": {
-                                        "type": "string"
-                                    },
-                                    "contact": {
-                                        "type": "string"
-                                    },
-                                    "client_id": {
-                                        "type": "string"
+                                    "price": {
+                                        "type": "number"
                                     }
                                 },
                                 "type": "object"
@@ -175,6 +203,62 @@
                 "responses": {
                     "200": {
                         "description": "Success"
+                    }
+                }
+            }
+        },
+        "/api/cartecadeaubycode": {
+            "get": {
+                "summary": "Récupérer une carte cadeau par son code",
+                "operationId": "bbfffa6b9445a92996c8cefb35476f82",
+                "parameters": [
+                    {
+                        "name": "code",
+                        "in": "query",
+                        "description": "ID de la carte cadeau",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Carte cadeau récupérée avec succès"
+                    },
+                    "404": {
+                        "description": "Carte cadeau non trouvée"
+                    },
+                    "400": {
+                        "description": "Requête invalide"
+                    }
+                }
+            }
+        },
+        "/api/cartecadeaubyclient": {
+            "get": {
+                "summary": "Récupérer une carte cadeau par son code",
+                "operationId": "8decd9e80db264b5b261a2f94ccae5f3",
+                "parameters": [
+                    {
+                        "name": "client_id",
+                        "in": "query",
+                        "description": "ID du client",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Carte cadeau récupérée avec succès"
+                    },
+                    "404": {
+                        "description": "Carte cadeau non trouvée"
+                    },
+                    "400": {
+                        "description": "Requête invalide"
                     }
                 }
             }
@@ -283,6 +367,112 @@
                     },
                     "400": {
                         "description": "Erreur de validation ou ID manquant"
+                    }
+                }
+            }
+        },
+        "/api/check-email/": {
+            "get": {
+                "summary": "Vérification email saisi ",
+                "operationId": "7e3711accc695ab261ea65aeb86e0f5d",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "email à vérifier",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/api/getClientById": {
+            "get": {
+                "summary": "Récupérer un client par son ID",
+                "operationId": "55a7389375c2b3ece28a05091770503b",
+                "parameters": [
+                    {
+                        "name": "client_id",
+                        "in": "query",
+                        "description": "ID du client à récupérer",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Client trouvé"
+                    },
+                    "404": {
+                        "description": "Client non trouvé"
+                    }
+                }
+            }
+        },
+        "/api/check-password": {
+            "post": {
+                "summary": "Vérifie si un mot de passe correspond à celui du client",
+                "operationId": "040e787e384d3c627312c3c61feb74ca",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "example": "email@gmail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "Secret123"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Mot de passe correct",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "type": "boolean"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Client non trouvé"
+                    },
+                    "401": {
+                        "description": "Mot de passe incorrect"
                     }
                 }
             }
@@ -403,6 +593,47 @@
                                 "properties": {
                                     "amount": {
                                         "type": "integer"
+                                    },
+                                    "appointment_id": {
+                                        "type": "integer"
+                                    },
+                                    "subscription_id": {
+                                        "type": "integer"
+                                    },
+                                    "client_id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/api/orangemoney/status": {
+            "post": {
+                "summary": "Payer",
+                "operationId": "2ef522330c7e1b8c69a2d4b674bfacf0",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "order_id": {
+                                        "type": "string"
+                                    },
+                                    "amount": {
+                                        "type": "integer"
+                                    },
+                                    "pay_token": {
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
